--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -331,6 +331,15 @@ dtb-$(CONFIG_ARCH_SOCFPGA) +=				\
 	socfpga_stratix10_socdk_nand.dtb                \
 	socfpga_stratix10_socdk_qspi.dtb
 
+dtb-$(CONFIG_TARGET_SOCFPGA_CL_MITYSOM_5CS) +=		\
+	socfpga_mitysom5cse-l2-3y8_devkit.dtb		\
+	socfpga_mitysom5cse-h4-3ya_devkit.dtb		\
+	socfpga_mitysom5cse-h4-8ya_devkit.dtb		\
+	socfpga_mitysom5csx-h5-4ya_devkit.dtb		\
+	socfpga_mitysom5csx-h6-42a_devkit.dtb		\
+	socfpga_mitysom5csx-h6-4ya_devkit.dtb		\
+	socfpga_mitysom5csx-h6-53b_devkit.dtb
+
 dtb-$(CONFIG_TARGET_DRA7XX_EVM) += dra72-evm.dtb dra7-evm.dtb	\
 	dra72-evm-revc.dtb dra71-evm.dtb dra76-evm.dtb
 dtb-$(CONFIG_TARGET_AM57XX_EVM) += am57xx-beagle-x15.dtb \
