rtc: Add driver for Abracon AB1805.
Includes RTC calibration 'ab1805' U-Boot command:
* 'ab1805 cs val' sets the RTC's calibration value to val.
* 'ab1805 cal_mode 0|1' disables (0) or enables (1) the RTC's square
  wave output for measuring the RTC frequency.

--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -137,4 +137,10 @@ config RTC_STM32
 	help
 	  Enable STM32 RTC driver. This driver supports the rtc that is present
 	  on some STM32 SoCs.
+
+config RTC_AB1805
+	bool "Enable AB1805 driver"
+	depends on DM_RTC
+	help
+	  Support for Abracon 1805 Real Time Clock device.
 endmenu
