arm: socfpga: Enable AB1805 for MitySOM-5CSx.
Note that by default on ARM, U-Boot uses its own implementation of
libgcc rather than the version included with the toolchain; this must be
disabled via CONFIG_USE_PRIVATE_LIBGCC, or else linking fails due to the
floating point arithmetic used for setting a calibration value.
Specifically, U-Boot's private libgcc does not provide implementations
for the following symbols emitted by our toolchain:
* __aeabi_i2d
* __aeabi_ddiv
* __aeabi_dcmplt
* __aeabi_dsub
* __aeabi_d2iz
* __aeabi_dadd

--- a/arch/arm/dts/socfpga_mitysom5cs-u-boot.dtsi
+++ b/arch/arm/dts/socfpga_mitysom5cs-u-boot.dtsi
@@ -80,6 +80,12 @@
 	bank-name = "portc";
 };
 
+&rtc0 {
+	/* U-Boot's driver is less inclusive than Linux's, so we have a stricter
+	 * compatible */
+	compatible = "abracon,ab1805";
+};
+
 &usb1 {
 	/* Our Linux device tree uses a custom compatible that's not implemented
 	 * in the U-Boot driver, so revert back to the compatible from
